recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:14: error: too many arguments for method min: (l: List[Int])Int
    return min(l.head,min(l.tail))
              ^